fix layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -177,10 +177,18 @@ ul {
 .img--avatar {
   margin: auto;
   padding: 1.5em; }
+  @media (min-width: 768px) {
+    .img--avatar {
+      height: auto;
+      width: 50%;
+      padding: 0;
+      margin-bottom: 2em;
+      padding-top: 1em; } }
 
 @media (min-width: 768px) {
   .form {
-    padding-left: 4em; } }
+    width: 100%;
+    padding-left: 3em; } }
 
 .theme__colors {
   border-radius: 5px;
@@ -196,7 +204,10 @@ ul {
   font-size: 1.1em; }
   @media (min-width: 768px) {
     .theme__colors {
-      margin: 0.3em; } }
+      margin: 0.3em;
+      font-size: 0.9em;
+      padding-left: 1%;
+      padding-right: 1%; } }
 
 .btn--default {
   background-color: #59b0da;
@@ -237,7 +248,8 @@ ul {
   flex-direction: column; }
   @media (min-width: 768px) {
     .grid__col--6 {
-      padding-right: 8em; } }
+      padding-right: 5%;
+      width: 50%; } }
 
 .img--frame {
   padding: 1em;
@@ -245,14 +257,16 @@ ul {
   border: #c4c4c4 solid 1px; }
   @media (min-width: 768px) {
     .img--frame {
-      margin-left: 3em; } }
+      margin-left: 3em;
+      width: 100%; } }
 
 @media (min-width: 768px) {
   .img--logo {
-    padding-left: 2em; } }
+    padding-left: 2em;
+    padding-right: 4em; } }
 
 .grid__row {
-  padding: 2.5em 0; }
+  padding: 1em 0; }
 
 .grid__col--12.theme__colors {
   border-radius: 5px;
@@ -291,7 +305,10 @@ ul {
   background-color: #a0cbf2; }
   @media (min-width: 768px) {
     .grid__col--4.theme__colors {
-      text-align: center; } }
+      text-align: center;
+      -webkit-box-flex: 1.5;
+      -ms-flex: 1.5;
+      flex: 1.5; } }
 
 .grid__col--3.theme__colors {
   border-radius: 5px;
@@ -317,7 +334,10 @@ ul {
   background-color: #8cd191; }
   @media (min-width: 768px) {
     .grid__col--5.theme__colors {
-      text-align: center; } }
+      text-align: center;
+      -webkit-box-flex: 1.5;
+      -ms-flex: 1.5;
+      flex: 1.5; } }
 
 .grid__col--7.theme__colors {
   border-radius: 5px;
@@ -331,8 +351,9 @@ ul {
   @media (min-width: 768px) {
     .grid__col--7.theme__colors {
       text-align: center;
-      padding-left: 14em;
-      padding-right: 14em; } }
+      -webkit-box-flex: 3;
+      -ms-flex: 3;
+      flex: 3; } }
 
 .grid__col--8.theme__colors {
   border-radius: 5px;
@@ -346,8 +367,9 @@ ul {
   @media (min-width: 768px) {
     .grid__col--8.theme__colors {
       text-align: center;
-      padding-left: 14em;
-      padding-right: 14em; } }
+      -webkit-box-flex: 3;
+      -ms-flex: 3;
+      flex: 3; } }
 
 @media (min-width: 768px) {
   .grid__row {
@@ -363,11 +385,15 @@ ul {
     display: flex;
     -ms-flex-pack: distribute;
     justify-content: space-around;
-    -webkit-box-flex: 1;
-    -ms-flex: 1;
-    flex: 1; }
+    margin: auto;
+    width: 100%; }
   .centered {
-    margin: 7em; } }
+    margin: 7em; }
+  .grid__col--8 {
+    width: 60%; }
+  .grid__col--4 {
+    width: 40%;
+    font-size: 100%; } }
 
 .nav__item {
   text-align: center;
@@ -403,6 +429,9 @@ ul {
   line-height: 1.7em;
   font-weight: 500;
   color: #797373; }
+  @media (min-width: 768px) {
+    .container {
+      font-size: 100%; } }
 
 .blockquote {
   font-size: 1.6em;
@@ -411,3 +440,6 @@ ul {
   margin: 1em;
   margin-bottom: 3em;
   padding-left: 1em; }
+  @media (min-width: 768px) {
+    .blockquote {
+      width: 100%; } }
