--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -6,6 +6,9 @@
   line-height: 1.7em;
   font-weight: 500;
   color: $main-font;
+  @include mq($break-sm) {
+    font-size: 100%;
+  }
 }
 
 .blockquote {
@@ -15,4 +18,7 @@
   margin: 1em;
   margin-bottom: 3em;
   padding-left: 1em;
+  @include mq($break-sm) {
+    width: 100%;
+  }
 }
